[package]
name = "alpamayo"
version = "0.18.2"
authors = ["Lamports Dev"]
edition = "2024"
description = "Part of Solana RPC stack for sealed data"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/alpamayo"
license = "Apache-2.0"
keywords = ["solana", "rpc"]
publish = false

[dependencies]
affinity-linux = "1.0.1"
anyhow = "1.0.96"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "2.9.0"
bitvec = "1.0.1"
bs58 = "0.5.1"
clap = { version = "4.5.30", features = ["derive"] }
crossbeam = "0.8.4"
foldhash = "0.2.0"
futures = "0.3.31"
http-body-util = "0.1.3"
human-size = "0.4.3"
humantime-serde = "1.1.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server-auto", "server-graceful"] }
json5 = "1.0.0"
jsonrpsee-types = "0.26.0"
libc = "0.2.170"
maplit = "1.0.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false }
num_cpus = "1.16.0"
prost = "0.11.9"
quanta = "0.12.5"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.13.1"
richat-client = "8.0.0"
richat-metrics = "1.0.1"
richat-proto = "8.0.0"
richat-shared = { version = "8.0.0", default-features = false, features = ["config", "jsonrpc", "version"] }
rocksdb = "0.24.0"
rustls = "0.23.36"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.33"
signal-hook = "0.4.3"
solana-borsh = "3.0.0"
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget = "~3.1.0"
solana-compute-budget-interface = { version = "3.0.0", features = ["borsh"] }
solana-epoch-rewards-hasher = "3.1.0"
solana-epoch-schedule = "3.0.0"
solana-hash = "4.0.1"
solana-instruction-error = "2.1.0"
solana-message = "3.0.1"
solana-pubkey = "4.0.0"
solana-rpc-client = "~3.1.0"
solana-rpc-client-api = "~3.1.0"
solana-signature = "3.1.0"
solana-storage-proto = { version = "~3.1.0", features = ["agave-unstable-api"] }
solana-transaction = "3.0.2"
solana-transaction-context = "~3.1.0"
solana-transaction-status = "~3.1.0"
solana-version = "~3.1.0"
thiserror = "2.0.11"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = "1.43.0"
tokio-uring = "0.5.0"
tokio-util = "0.7.16"
tonic = "0.14.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter", "json"] }
url = "2.5.4"

[build-dependencies]
anyhow = "1.0.96"
cargo-lock = "11.0.0"
git-version = "0.3.9"
vergen = { version = "9.0.4", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
